# perchnote

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
docs/: SECURITY.md  SHORTCUTS.md
scripts/: check-tanstack-pin.mjs  install.sh  test.sh
src/: App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: deeplink.rs  lib.rs  main.rs  secrets.rs  state.rs
src-tauri/src/ai/: anthropic_api.rs  apple_ai.rs  apple_embed.rs  embeddings.rs  mod.rs  ollama.rs  prompts.rs
src-tauri/src/audio/: calldetect.rs  clip.rs  cluster.rs  diarize.rs  mel.rs  mic.rs  mixer.rs  mod.rs  ringbuf.rs  supervise.rs  swap.rs  system.rs  talkstats.rs  vpio.rs
src-tauri/src/calendar/: detection.rs  google.rs  http.rs  ics.rs  microsoft.rs  mod.rs  pkce.rs
src-tauri/src/commands/: audio.rs  autotitle.rs  calendar.rs  chat.rs  deeplinks.rs  folders.rs  import.rs  insights.rs  meetings.rs  mod.rs  notes.rs  search.rs  settings.rs  tags.rs  templates.rs  voice.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs  searchgrammar.rs  seed.rs  vectors.rs
src-tauri/src/transcription/: apple.rs  corrections.rs  engine.rs  mod.rs  whisper.rs
src-tauri/swift/: AppleAI.swift  EmbeddingEngine.swift  ProcessAudioTap.swift  SpeechEngine.swift  VoiceProcessedMic.swift
src/__tests__/: MeetingStatusBadge.test.tsx  uiStore.test.ts
src/__tests__/a11y/: axe.test.tsx
src/__tests__/components/: AiNotesHeader.test.tsx  Announcer.test.tsx  AskAIOverlay.test.tsx  CalendarView.test.tsx  CommandPalette.test.tsx  ConfirmDialog.test.tsx  DataSettings.test.tsx  FolderControls.test.tsx  IdentifySpeakersPanel.test.tsx  KeyboardShortcutsHelp.test.tsx  LiveTranscriptView.test.tsx  MeetingActionsBar.test.tsx  MeetingHeader.test.tsx  MeetingView.test.tsx  MetadataStrip.test.tsx  NarrativeCard.test.tsx  NavigationListPolish.test.tsx  NotesListSearch.test.tsx  NotesReceipt.test.tsx  NotesSurface.test.tsx  OnboardingFlow.test.tsx  OverlayAccessibility.test.tsx  PeriodCard.test.tsx  PostRecordingScreen.test.tsx  RecipesPanel.test.tsx  RecordingAssist.test.tsx  SettingsView.test.tsx  TagEditor.test.tsx  TaskBuckets.test.ts  TasksView.test.tsx  TodayView.test.tsx  TranscriptDrawer.test.tsx  enhancementMachine.test.ts  insightsMath.test.ts
src/__tests__/hooks/: useFocusTrap.test.tsx  useOnboarding.test.tsx  useRovingFocus.test.tsx
src/__tests__/lib/: calendarLayout.test.ts  correctionRules.test.ts  deepActions.test.ts  enhance.test.ts  errors.test.ts  mirrorLifecycle.test.ts  (+8 more)
src/hooks/: useFocusTrap.ts  useFolders.ts  useOnboarding.ts  useRovingFocus.ts
src/lib/: announce.ts  calendarLayout.ts  correctionRules.ts  deepActions.ts  editorFontSize.ts  enhance.ts  errors.ts  ipc.ts  keywords.ts  localDate.ts  meetingDrag.ts  mirrorLifecycle.ts  mirrorMarkdown.ts  overlayStack.ts  paneFocus.ts  quickNote.ts  recipes.ts  recordingClock.ts  searchFilterHints.ts  searchGrouping.ts  shortcuts.ts  thingsExport.ts
src/routes/: __root.tsx  calendar.tsx  folders.$folderId.tsx  folders.index.tsx  folders.tsx  index.tsx  insights.tsx  meeting.$id.tsx  meetings.tsx  onboarding.tsx  settings.tsx  tasks.tsx
src/stores/: recordingStore.ts  themeStore.ts  toastStore.ts  uiStore.ts
src/styles/: globals.css
(+111 files in other folders)
