[package]
name = "perchnote"
version = "0.1.0"
description = "Perchnote — local-first meeting notes for macOS with on-device transcription."
license = "MIT"
edition = "2021"
homepage = "https://perchnote.com"
repository = "https://github.com/GurtekS/perchnote"

[lib]
name = "perchnote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
rusqlite_migration = "1"
cpal = "0.15"
ringbuf = "0.4"
rubato = "0.15"
hound = "3.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
url = "2"
urlencoding = "2"
open = "5"
which = "7"
realfft = "3.5.0"

[target.'cfg(target_os = "macos")'.dependencies]

[dev-dependencies]
tempfile = "3.27.0"
