[package]
name = "perchnote"
version = "0.8.0"
description = "Perchnote — local-first meeting notes for macOS with on-device transcription."
license = "MIT"
edition = "2021"
homepage = "https://perchnote.com"
repository = "https://github.com/GurtekS/perchnote"
# Two bins live here (the app + src/bin/perchnote-mcp.rs); keep `cargo run`
# and `tauri dev` pointed at the app.
default-run = "perchnote"

[lib]
name = "perchnote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
rusqlite_migration = "1"
sqlite-vec = "0.1.9"
whisper-rs = { version = "0.16", features = ["metal", "log_backend"] }
speakrs = { version = "0.4", features = ["coreml"] }
# Local-only HF cache lookups (already in-tree via speakrs): lets the
# auto-diarize completion hook detect downloaded models WITHOUT fetching.
# No features: only the offline `Cache` API is used — never the network.
hf-hub = { version = "0.5", default-features = false }
cpal = "0.17"
ringbuf = "0.4"
rubato = "0.15"
hound = "3.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
unicode-segmentation = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
url = "2"
urlencoding = "2"
open = "5"
realfft = "3.5.0"
sha2 = "0.10"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]

[dev-dependencies]
serial_test = "3"
tempfile = "3.27.0"

[profile.release]
strip = "symbols"

